--- a/forras/yoko.css
+++ b/forras/yoko.css
@@ -33,6 +33,7 @@ nav ul {
 
 nav li {
 	margin-right: 40px;
+    display: inline;
 }
 
 nav li a {
@@ -113,4 +114,21 @@ section.contpage {
 .home {
 	text-align: center;
 	font-size: 20px;
+}
+
+header{
+    height: 200px;
+}
+
+article p{
+    text-align: justify;
+}
+
+ashide{
+    width: 230px;
+    float: right;
+}
+ashide a{
+    color: #6581;
+    font-d
 }
